--- a/MunicipalTrashProgram/MunicipalTrashProgram.csproj
+++ b/MunicipalTrashProgram/MunicipalTrashProgram.csproj
@@ -199,7 +199,6 @@
     <Compile Include="Controllers\AddressesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\PersonController.cs" />
     <Compile Include="Controllers\UserInfoesController.cs" />
     <Compile Include="Controllers\WorkersController.cs" />
     <Compile Include="DoWork.cs" />
@@ -210,12 +209,23 @@
     <Compile Include="Migrations\201609141559595_init.Designer.cs">
       <DependentUpon>201609141559595_init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609151240252_save.cs" />
+    <Compile Include="Migrations\201609151240252_save.Designer.cs">
+      <DependentUpon>201609151240252_save.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609151501012_address nullable.cs" />
+    <Compile Include="Migrations\201609151501012_address nullable.Designer.cs">
+      <DependentUpon>201609151501012_address nullable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609151501504_changed address nullable.cs" />
+    <Compile Include="Migrations\201609151501504_changed address nullable.Designer.cs">
+      <DependentUpon>201609151501504_changed address nullable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\Person.cs" />
     <Compile Include="Models\UserInfo.cs" />
     <Compile Include="Models\Worker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -281,11 +291,6 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Person\Create.cshtml" />
-    <Content Include="Views\Person\Delete.cshtml" />
-    <Content Include="Views\Person\Details.cshtml" />
-    <Content Include="Views\Person\Edit.cshtml" />
-    <Content Include="Views\Person\Index.cshtml" />
     <Content Include="Views\Addresses\Create.cshtml" />
     <Content Include="Views\Addresses\Delete.cshtml" />
     <Content Include="Views\Addresses\Details.cshtml" />
@@ -316,6 +321,15 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201609141559595_init.resx">
       <DependentUpon>201609141559595_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609151240252_save.resx">
+      <DependentUpon>201609151240252_save.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609151501012_address nullable.resx">
+      <DependentUpon>201609151501012_address nullable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609151501504_changed address nullable.resx">
+      <DependentUpon>201609151501504_changed address nullable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
