--- a/MunicipalTrashProgram/MunicipalTrashProgram.csproj
+++ b/MunicipalTrashProgram/MunicipalTrashProgram.csproj
@@ -229,6 +229,10 @@
     <Compile Include="Migrations\201609161254059_add fk for userinfo on users.Designer.cs">
       <DependentUpon>201609161254059_add fk for userinfo on users.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609161522231_update userinfo.cs" />
+    <Compile Include="Migrations\201609161522231_update userinfo.Designer.cs">
+      <DependentUpon>201609161522231_update userinfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
@@ -344,6 +348,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201609161254059_add fk for userinfo on users.resx">
       <DependentUpon>201609161254059_add fk for userinfo on users.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609161522231_update userinfo.resx">
+      <DependentUpon>201609161522231_update userinfo.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
