added png to layout

--- a/MunicipalTrashProgram/MunicipalTrashProgram.csproj
+++ b/MunicipalTrashProgram/MunicipalTrashProgram.csproj
@@ -234,6 +234,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="GoogleMaps.LocationServices.readme.txt" />
+    <Content Include="K&amp;N-garbagetruck.png" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="Scripts\bootstrap.js" />
